infra/k8s/block-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: block-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: block
  template:
    metadata:
      labels:
        app: block
    spec:
      containers:
        - name: block
          image: vinkum655/block
---
apiVersion: v1
kind: Service
metadata:
  name: block-srv
spec:
  selector:
    app: block
  ports:
    - name: block
      protocol: TCP
      port: 3000
      targetPort: 3000
