infra/k8s/block-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: block-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: block-mongo
  template:
    metadata:
      labels:
        app: block-mongo
    spec:
      containers:
        - name: block-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: block-mongo-srv
spec:
  selector:
    app: block-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
