infra/k8s/blocks-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocks-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blocks-mongo
  template:
    metadata:
      labels:
        app: blocks-mongo
    spec:
      containers:
        - name: blocks-mongo
          image: mongo #coming from docker hub image
---
apiVersion: v1 #cluster iP service to make sure we can connect to the pod that got created.
kind: Service
metadata:
  name: blocks-mongo-srv
spec:
  selector:
    app: blocks-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
