infra/k8s/newauth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newauth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newauth
  template:
    metadata:
      labels:
        app: newauth
    spec:
      containers:
        - name: newauth
          image: vinkum655/newauth
---
apiVersion: v1
kind: Service
metadata:
  name: newauth-srv
spec:
  selector:
    app: newauth
  ports:
    - name: newauth
      protocol: TCP
      port: 3000
      targetPort: 3000
