infra/k8s/newblock-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newblock-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newblock
  template:
    metadata:
      labels:
        app: newblock
    spec:
      containers:
        - name: newblock
          image: vinkum655/newblock
---
apiVersion: v1
kind: Service
metadata:
  name: newblock-srv
spec:
  selector:
    app: newblock
  ports:
    - name: newblock
      protocol: TCP
      port: 3000
      targetPort: 3000
