infra/k8s/realtime-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime
  template:
    metadata:
      labels:
        app: realtime
    spec:
      containers:
        - name: realtime
          image: vinkum655/realtime
---
apiVersion: v1
kind: Service
metadata:
  name: realtime-srv
spec:
  selector:
    app: realtime
  ports:
    - name: realtime
      protocol: TCP
      port: 3000
      targetPort: 3000
